fix text color for accessibility contrast

--- a/services/frontend/src/components/basicInfo/BasicInfoView.less
+++ b/services/frontend/src/components/basicInfo/BasicInfoView.less
@@ -5,17 +5,24 @@
   padding-left: 0.5em;
   white-space: normal;
 }
-.orgButton {
-  margin-bottom: 0;
-  padding: 0;
-  height: 100%;
-}
-.orgDropdown {
-  padding: 10px 7px;
-}
+
 .rowTopSplitter {
   border-top: 1px solid #f0f0f0;
 }
 .popcontent {
   max-width: 350px;
+}
+
+#card-profile-basic-info {
+  .orgButton {
+    margin-bottom: 0;
+    padding: 0;
+    height: 100%;
+  }
+  .orgDropdown {
+    padding: 10px 7px;
+  }
+  .ant-list-item-meta-description {
+    color: rgba(0, 0, 0, 0.85);
+  }
 }
